add schedule app / not scc

--- a/likelion/record/templates/record/base.html
+++ b/likelion/record/templates/record/base.html
@@ -42,12 +42,11 @@
 
             <ul>
 
-            <li><a href="#">calendar.1</a></li>
+            <li><a href="{% url 'schedule_all' %}">All</a></li>
 
-            <li><a href="#">2</a></li>
 
+            <li><a href="{% url 'schedule_this' %}">This Month</a></li>
             
-
 
             </li>
 
