--- a/likelion/record/templates/record/base.html
+++ b/likelion/record/templates/record/base.html
@@ -18,10 +18,10 @@
     </haed>
     <body class="container-fluid">
        
-        {% comment %} <img src="{% static 'logo.png' %}" alt=""/> {% endcomment %}
+       
+        <h3 class="logo"><img class="logo_img" src="{% static 'logo.jpg' %}">          충북대학교 x 멋쟁이사자처럼</h3>
         
-        <h3 class="logo"><img class="logo_img" src="{% static 'logo.jpg' %}">충북대학교 x 멋쟁이사자처럼</h3>
-        <div class="container">
+        <hr/>
        
            
        
@@ -75,20 +75,21 @@
             </nav>
         
         {% comment %} ============================== {% endcomment %}
-        <br>
+      
         <div class="mini_background">
-     
-            {% block content%}
-            {% endblock %}
+            <div class="container">
+                {% block content%}
+                {% endblock %}
+            </div>
         </div>    
         </div>
+        <br>
         <br>
         <br>
     </body>
 
     <footer>
-            MAEK : CSH / SEJ / PTM<br>
-            DESIGN : EJY
-            {% comment %} 여기 왜 누르면 3번째 글로 들어가지지? {% endcomment %}
+        MAKE
+    
     </footer>
 </html>
