add member(not pagenation)

--- a/likelion/record/templates/record/base.html
+++ b/likelion/record/templates/record/base.html
@@ -68,7 +68,7 @@
 
             </li>
 
-            <li><a href="#">Member</a></li>
+            <li><a href="{% url 'member'%}">Member</a></li>
 
             </ul>
 
