--- a/likelion/record/templates/record/base.html
+++ b/likelion/record/templates/record/base.html
@@ -22,6 +22,10 @@
         <h3 class="logo"><img class="logo_img" src="{% static 'logo.jpg' %}">          충북대학교 x 멋쟁이사자처럼</h3>
         
         <hr/>
+
+        <a href="{% url 'logout'%}">
+            <button type="button" class="btn btn-secondary">logout</button>
+        </a>
        
            
        
@@ -36,7 +40,7 @@
 
             <ul>
 
-            <li><a href="#">Home</a></li>
+            <li><a href="{% url 'main'%}">Home</a></li>
 
             <li><a href="#">Calendar</a>
 
@@ -72,7 +76,7 @@
 
             </ul>
 
-            </nav>
+        </nav>
         
         {% comment %} ============================== {% endcomment %}
       
@@ -82,7 +86,7 @@
                 {% endblock %}
             </div>
         </div>    
-        </div>
+
         <br>
         <br>
         <br>
