--- a/likelion/record/templates/record/base.html
+++ b/likelion/record/templates/record/base.html
@@ -40,7 +40,7 @@
 
             <ul>
 
-            <li><a href="{% url 'main'%}">Home</a></li>
+            <li><a href="#">introduce</a></li>
 
             <li><a href="#">Calendar</a>
 
