--- a/likelion/record/templates/record/main.html
+++ b/likelion/record/templates/record/main.html
@@ -1,12 +1,13 @@
 {% extends 'record/base.html' %}
-<h1>메인페이지</h1>
 {% block content %}
+<h1>메인페이지</h1>
 <div>
-{% for category in category_all %}
-    <h3><a href="{% url 'board' category.id %}">{{ category.name }}</h3>
+{% comment %} {% for category in category_all %}
+    <h3><a href="{% url 'board' category.id %}">{{ category.name }}</h3> {% endcomment %}
     <table class="table">
         <thead>
             <tr>
+                <th>category</th>
                 <th>title</th>
                 <th>writer</th>
                 <th>date</th>
@@ -15,6 +16,7 @@
         <tbody>
         {% for post in posts %}
             <tr>
+                <td>{{ post.category }}</td>
                 <td><a href="{% url 'post_detail' post.id %}">{{ post.title }}</a></td>
                 <td>user</td>
                 {% comment %} 유저이름 추가하기 {% endcomment %}
@@ -26,7 +28,7 @@
         </tbody>
     </table>
     <br>
-{% endfor %}
+{% comment %} {% endfor %} {% endcomment %}
 
 </div>
 
