--- a/likelion/record/templates/record/post_new.html
+++ b/likelion/record/templates/record/post_new.html
@@ -1,4 +1,5 @@
 {% extends 'record/base.html' %}
+{% block content %}
 <h1>NEW</h1>
 <form action = "" method="post">
     {% csrf_token %}
@@ -8,3 +9,4 @@
     <input type="submit" value="SAVE">
 
 </form>
+{% endblock %}
