--- a/likelion/schedule/templates/schedule_this.html
+++ b/likelion/schedule/templates/schedule_this.html
@@ -35,7 +35,7 @@
 
             <ul>
 
-            <li><a href="#">Home</a></li>
+            <li><a href="{% url 'main'%}">Home</a></li>
 
             <li><a href="#">Calendar</a>
 
