--- a/likelion/record/templates/record/post_edit.html
+++ b/likelion/record/templates/record/post_edit.html
@@ -1,3 +1,5 @@
+{% extends 'record/base.html' %}
+{% block content %}
 <h1>EDIT</h1>
 <form action = "" method="post">
     {% csrf_token %}
@@ -6,3 +8,4 @@
     </table>
     <input type="submit" value="EDIT">
 </form>
+{% endblock %}
