--- a/likelion/record/templates/record/board.html
+++ b/likelion/record/templates/record/board.html
@@ -17,7 +17,7 @@
         {% for post in posts %}    
             <tr>
                 <td>{{ post.category }}</td>
-                <td><a href="{% url 'post_detail' post.id  %}">{{ post.title }}</a></td>
+                <td><a href="{% url 'post_detail' post.id  %}">{{ post.title }} [{{ post.comment_set.count }}]</a></td>
                 <td>user</td>
                 {% comment %} 유저이름 추가하기 {% endcomment %}
                 <td>{{ post.created_at }}</td>
