--- a/likelion/record/templates/record/post_new.html
+++ b/likelion/record/templates/record/post_new.html
@@ -1,7 +1,7 @@
 {% extends 'record/base.html' %}
 {% block content %}
 <h1>NEW</h1>
-<form action = "" method="post">
+<form action = "" method="post" enctype="multipart/form-data" novalidate>
     {% csrf_token %}
     <table>
         {{ form }}
