--- a/likelion/schedule/templates/schedule_this.html
+++ b/likelion/schedule/templates/schedule_this.html
@@ -31,7 +31,7 @@
             <p>Welcome, new user. Please log in.</p> 
             {% endif %} {% endcomment %}
 
-                    <nav>
+            <nav class="calendar_menu">
 
             <ul>
 
