add schedule all

--- a/likelion/record/static/css/base.css
+++ b/likelion/record/static/css/base.css
@@ -190,4 +190,9 @@ footer {
     z-index: 2;
   }
 
-  /* =============================user== */
+
+.logout {
+    position: absolute;
+    right: 100px;
+    top : 65px;
+}
