--- a/likelion/record/templates/record/base.html
+++ b/likelion/record/templates/record/base.html
@@ -19,23 +19,14 @@
         <img class="lion_icon" src="{% static 'lion_icon.png' %}">
         <h4 class="me">me</h4>
 
-
-
-           
-        
-    {% comment %}================================================== {% endcomment %}
-      
- 
-    {% comment %}  ======================================================{% endcomment %}
-
     </haed>
 
     <body class="container-fluid">
         <hr/>
-
-        <a href="{% url 'logout'%}">
+        <a  class="logout" href="{% url 'logout'%}">
             <button type="button" class="btn btn-secondary">logout</button>
         </a>
+     
        
            
        
@@ -104,7 +95,10 @@
 
     <footer>
     <br>
+    <br>
+    <br>
         MAKE
-    
+    <br>
+    <br>
     </footer>
 </html>
