--- a/likelion/schedule/templates/schedule_all.html
+++ b/likelion/schedule/templates/schedule_all.html
@@ -1,6 +1,25 @@
 {% extends 'record/base.html' %}
 
 {% block content %}
-
-
+<table class="table">
+    <thead>
+            <tr>
+                <th>Date</th>
+                <th>Schedule</th>
+                <th>Start</th>
+                <th>End</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for schedule in schedules %}
+            <tr>
+                <td>{{ schedule.day }}</td>
+                <td>{{ schedule.notes }}</td>
+                <td>{{ schedule.start_time }}</td>
+                <td>{{ schedule.end_time }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+</table>
 {% endblock %}
+
