--- a/likelion/record/templates/record/base.html
+++ b/likelion/record/templates/record/base.html
@@ -9,8 +9,7 @@
        <!-- 부가적인 테마 -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
-        <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
         
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -91,6 +90,12 @@
         <br>
         <br>
         <br>
+
+        <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+        <script scr ="js/jquery.min.js"></script>
+        <script scr ="js/bootstrap.bundle.min.js"></script>
+        <script scr ="js/bootstrap.min.js"></script>
     </body>
 
     <footer>
@@ -100,5 +105,6 @@
         MAKE
     <br>
     <br>
+    
     </footer>
 </html>
