--- a/likelion/account/templates/account/login.html
+++ b/likelion/account/templates/account/login.html
@@ -1,8 +1,39 @@
-{% extends 'record/base.html' %}
-
+{% extends 'account/base.html' %}
+{% load static %}
+{% load staticfiles %}
 {% block title %}Login{% endblock %}
 {% block content %}
-<div class="login">
+
+<div class="left" style="float:left;">
+   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+           <div class="carousel-inner">
+             <div class="carousel-item active">
+               <img src="..." class="d-block w-100" alt="" style="width : 50%; height:900px;">
+             </div>
+             <div class="carousel-item">
+               <img src="..." class="d-block w-100" alt="" style="width : 50%; height:900px;">
+             </div>
+             <div class="carousel-item">
+               <img src="..." class="d-block w-100" alt="" style="width : 50%; height:900px;">
+             </div>
+           </div>
+           <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+             <span class="sr-only">Previous</span>
+           </a>
+           <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+             <span class="carousel-control-next-icon" aria-hidden="true"></span>
+             <span class="sr-only">Next</span>
+           </a>
+         </div>
+</div>
+
+
+
+<div class="right" style="float:left;">
+   <div style = "justify-content:center; padding-top:250px;"> 
+      <img src="{% static 'logo6.png' %}" style="width:130px; height:130px; margin-left:40px; margin-bottom:10px;">
+                <h2>충북대학교 x 멋쟁이 사자처럼</h2> 
    <form action="" method="post">
       {% csrf_token %}
       {% for field in login_form %}
@@ -22,7 +53,8 @@
          <p><b>{{ error }}</b></p>
          {% endfor %}
       {% endif %}
-      <button>로그인</button>
+      <input type="submit" value="login" style="width:100px; background-color:rgb(133, 18, 61); border: 1px solid rgb(133, 18, 61); ">
    </form>
+   </div>
 </div>
 {% endblock %}
