--- a/likelion/record/static/css/base.css
+++ b/likelion/record/static/css/base.css
@@ -196,3 +196,11 @@ footer {
     right: 100px;
     top : 65px;
 }
+
+.warning {
+    padding-top : 300px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center; 
+}
