--- a/likelion/record/templates/record/post_detail.html
+++ b/likelion/record/templates/record/post_detail.html
@@ -22,7 +22,7 @@
     <table margin = >
         {{ form.as_table }}
     </table>
-    <input type='submit' value='Save'>
+    <input type='submit' value='Save' class = "btn btn-info">
 </form>
 
 <p>댓글</p>
@@ -43,22 +43,19 @@
     {% endfor %}
     
     
-    <p>
-    <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-        대댓글 작성
-    </button>
-    </p>
-    <div class="collapse">
+    <button data-toggle="collapse" data-target="#demo" class = "btn btn-info">대댓글 작성하기</button>
+
+    <div id="demo" class="collapse">
         <div class="card card-body">
-                {% comment %} <p>
-                    대댓글작성
-                </p> {% endcomment %}
+                        {% comment %} <p>
+                            대댓글작성
+                        </p> {% endcomment %}
             <form action='{% url 'recomment_new' post.id comment.id %}' method = 'post'>
                 {% csrf_token %}
-                <table margin = >
-                    {{ form.as_table }}
-                </table>
-                <input type='submit' value='Save'>
+                    <table margin = >
+                        {{ form.as_table }}
+                    </table>
+                    <input type='submit' value='Save' class = "btn btn-info">
             </form>
         </div>
     </div>
