--- a/likelion/record/static/css/base.css
+++ b/likelion/record/static/css/base.css
@@ -1,12 +1,14 @@
 body {
+    background-repeat:no-repeat;
     background-image: url('lion.jpg');
+    background-attachment:fixed;
     min-height: 100%;
     background : linear-gradient(to right, rgba(0, 0, 0, .5), rgba(255, 255, 255, .5)), url('lion.jpg'); 
     background-size : cover;
     padding-left: 30px;
     color : white;
     font-family: Helvetica, sans-serif; font-size: 18px; line-height: 24px;
-    
+
 }
 
 .logo_img {
@@ -164,8 +166,8 @@ position: absolute; left: 100%; top:0;
 /*메뉴 끝*/
 
 .mini_background{
-    height:700px;
-    width:1500px;
+    height : 900px;
+    width : 1500px;
     background-color: rgba( 0, 0, 0, 0.5 );
     margin : 0 auto;
 }
