--- a/likelion/schedule/templates/schedule_this.html
+++ b/likelion/schedule/templates/schedule_this.html
@@ -64,11 +64,11 @@
 
             <ul>
 
-            <li><a href= "{% url 'board_notice'%}">공지</a></li>
+            <li><a href= "">공지</a></li>
 
-            <li><a href="{% url 'board_free'%}">자유</a></li>
+            <li><a href="">자유</a></li>
 
-            <li><a href="{% url 'board_project'%}">과제</a></li>
+            <li><a href="">과제</a></li>
 
             </ul>
 
