--- a/likelion/record/templates/record/member.html
+++ b/likelion/record/templates/record/member.html
@@ -1,5 +1,6 @@
 {% extends 'record/base.html' %}
 {% block content %}
+<div class="post">
           <div class="member"> 
           <br><br>
             <div class="row">
@@ -56,6 +57,7 @@
                   <p>introduce<br>mail</p>
                   </div><!-- /.col-lg-4 -->
           </div><!-- /.row --> 
+      </div>
 {% endblock %}
 
 
