--- a/likelion/record/templates/record/warning.html
+++ b/likelion/record/templates/record/warning.html
@@ -1,6 +1,8 @@
 {% extends 'record/base.html' %}
 {% block content %}
+<div class="post">
 <div class="warning">
 <h2>자신의 글만 수정/삭제 할 수 있습니다.</h2>
+</div>
 </div>
 {% endblock %}
