--- a/likelion/account/templates/account/base.html
+++ b/likelion/account/templates/account/base.html
@@ -15,54 +15,55 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        <!-- <link rel="stylesheet" href="{% static 'css/base.css' %}"> -->
     <style>
 
         .right{
-            height:900px;
+            
+            height:800px;
             width:30%;
             text-align: center;
             justify-content: center;
-            border-left: 1px solid white;
+            /* border-left: 1px solid white; */
             margin-left : 30px;
         }
 
        .left{
+        height:800px;
         margin-left:-80px;
         margin-top:-30px;
            width : 70%;
        }
 
         section{
+            
             height: 95%;
             display: flex;
             width: 100%;
         }
      
         nav{
-            height: 900px;
+            
+            height: 800px;
             width: 50%;
             border-right: 1px solid white;
             margin: 7px;
         }
         article{
-            height: 900px;
+            
+            height: 800px;
             width: 50%;
          }
 
-         /* footer{
+         footer{
          background-color: rgb(133, 18, 61);
          height: 5%;
          display: flex;
          justify-content: center;
          align-items: center; 
-         } */
-
-         img{
-             height: 600px;
-             width: 1000px;
-             margin: 30px 50px;
          }
+
+         
          h1{
              margin:20px 10px;
              font-weight: bold;
@@ -78,6 +79,34 @@
          h2{
              font-size:25px;
          }
+
+
+         @font-face { font-family: 'TmonMonsori'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff') format('woff'); font-weight: normal; font-style: normal; }
+
+@font-face { 
+    font-family: 'NanumBarunGothic'; 
+    font-style: normal; 
+    font-weight: 400; 
+    src: url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot'); 
+    src: url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot?#iefix') 
+    format('embedded-opentype'), url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.woff') 
+    format('woff'), url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.ttf') 
+    format('truetype'); 
+} 
+
+@font-face { 
+    font-family: 'NanumBarunGothic'; 
+    font-style: normal; font-weight: 700; src: url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebBold.eot'); src: url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebBold.eot?#iefix') format('embedded-opentype'), url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebBold.woff') format('woff'), url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebBold.ttf') format('truetype') } 
+    
+@font-face { 
+    font-family: 'NanumBarunGothic'; font-style: normal; font-weight: 300; src: url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebLight.eot'); src: url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebLight.eot?#iefix') format('embedded-opentype'), url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebLight.woff') format('woff'), url('//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebLight.ttf') format('truetype'); } 
+    
+
+.nanumbarungothic * { font-family: 'NanumBarunGothic', sans-serif; }
+
+.post {
+    font-family: 'Sarabun', 'NanumBarunGothic', sans-serif;
+}
      
      </style>
      </head>
@@ -90,5 +119,6 @@
      
    
     </body> 
+    
 
 </html>
