--- a/likelion/record/templates/record/post_new.html
+++ b/likelion/record/templates/record/post_new.html
@@ -1,5 +1,6 @@
 {% extends 'record/base.html' %}
 {% block content %}
+<div class = "post">
 <h1>NEW</h1>
 <form action = "" method="post" enctype="multipart/form-data" novalidate>
     {% csrf_token %}
@@ -9,5 +10,6 @@
     <input type="submit" value="SAVE">
 
 </form>
+</div>
 {% endblock %}
 
