--- a/likelion/record/templates/record/introduce.html
+++ b/likelion/record/templates/record/introduce.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static %}
 {% load staticfiles %}
-<div class="post">
+<div class="post" style="color:white">
 <br><br><br><br><br><br>
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
