--- a/likelion/record/templates/record/main.html
+++ b/likelion/record/templates/record/main.html
@@ -1,11 +1,11 @@
 {% extends 'record/base.html' %}
 {% block content %}
 <div class="post">
-<h1 class="logo" style="font-size : 40px;">메인페이지</h1>
+<h1 class="logo" style="font-size : 40px; color:white;">메인페이지</h1>
 <div>
 {% comment %} {% for category in category_all %}
     <h3><a href="{% url 'board' category.id %}">{{ category.name }}</h3> {% endcomment %}
-    <table class="table">
+    <table class="table" style="color:white">
         <thead>
             <tr>
                 <th>category</th>
