--- a/likelion/record/templates/record/member.html
+++ b/likelion/record/templates/record/member.html
@@ -1,7 +1,7 @@
 {% extends 'record/base.html' %}
 {% block content %}
 <div class="post">
-          <div class="member"> 
+          <div class="member" style="color:white"> 
           <br><br>
             <div class="row">
                 <div class="col-lg-4">
