--- a/likelion/record/templates/record/post_new.html
+++ b/likelion/record/templates/record/post_new.html
@@ -1,13 +1,13 @@
 {% extends 'record/base.html' %}
 {% block content %}
 <div class = "post">
-<h1>NEW</h1>
+<h1 style="color:white">NEW</h1>
 <form action = "" method="post" enctype="multipart/form-data" novalidate>
     {% csrf_token %}
     <table>
         {{ form }}
     </table>
-    <input type="submit" value="SAVE">
+    <input type="submit" value="SAVE" style="color:white">
 
 </form>
 </div>
