--- a/likelion/schedule/templates/schedule_all.html
+++ b/likelion/schedule/templates/schedule_all.html
@@ -1,7 +1,7 @@
 {% extends 'record/base.html' %}
 
 {% block content %}
-<table class="table">
+<table class="table" style="color:white">
     <thead>
             <tr>
                 <th>Date</th>
