--- a/likelion/record/templates/record/post_detail.html
+++ b/likelion/record/templates/record/post_detail.html
@@ -2,18 +2,20 @@
 {% load static %}
 {% load staticfiles %}
 {% block content %}
+<br><br><br>
+
 <div class = "post" style="color:white">
-    <h3>{{ post.title }}</h3>
+    <h3 style="font-size : 40px;">{{ post.title }}</h3>
     <p>{{ post.text }}</p>
     <p> 작성자 : {{post.name_id}}</p>
-    <p>Created date : {{ post.created_at }}</p>
-    <p>Updated date : {{ post.updated_at }}</p>
+    <p> 작성일 : {{ post.created_at }}</p>
+    <p> 수정일 : {{ post.updated_at }}</p>
     <p>Category : {{ post.category }}</p>
     {% if post.file%}
     <P><img src = "{{post.file.url}}" alt=""></P>
     <p>File : <a id="id_uploaded_file" href="{{ post.file.url }}" download>{{ post.file }}</a></p>
     {% endif %}
-</div>
+
 
 <a href="{% url 'main' %}">Back</a>
 <a href="{% url 'post_edit' post.id %}">Edit</a>
@@ -64,6 +66,7 @@
         </form>
 
     </div>
+</div>
 </div>
 
 {% empty %}
