--- a/likelion/schedule/templates/schedule_this.html
+++ b/likelion/schedule/templates/schedule_this.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 {% load staticfiles %}
 <html>
@@ -16,7 +17,7 @@
         <link rel="stylesheet" href="{% static 'css/calendar.css' %}">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
-        <h3 class="logo"><img class="logo_img" src="{% static 'logo.jpg' %}">          충북대학교 x 멋쟁이사자처럼</h3>
+        <h3 class="logo"><a href="{% url 'main' %}"><img class="logo_img" src="{% static 'logo6.png' %}"></a>          충북대학교 x 멋쟁이사자처럼</h3>
         <img class="lion_icon" src="{% static 'lion_icon.png' %}">
         <h4 class="me">me</h4>
 
@@ -28,7 +29,10 @@
        
         
         <hr/>
-        
+       
+        <a  class="logout" href="{% url 'logout'%}">
+            <button type="button" class="btn btn-secondary">logout</button>
+        </a>
        
            
        
@@ -42,7 +46,7 @@
 
             <ul>
 
-            <li><a href="#">introduce</a></li>
+            <li><a href="{% url 'introduce' %}">introduce</a></li>
 
             <li><a href="#">Calendar</a>
 
@@ -64,11 +68,11 @@
 
             <ul>
 
-            <li><a href= "">공지</a></li>
+            <li><a href= "{% url 'board' 4%}">공지</a></li>
 
-            <li><a href="">자유</a></li>
+            <li><a href="{% url 'board' 5%}">자유</a></li>
 
-            <li><a href="">과제</a></li>
+            <li><a href="{% url 'board' 6%}">과제</a></li>
 
             </ul>
 
