--- a/likelion/record/templates/record/post_detail.html
+++ b/likelion/record/templates/record/post_detail.html
@@ -5,24 +5,36 @@
 <br><br><br>
 
 <div class = "post" style="color:white">
-    <h3 style="font-size : 40px;">{{ post.title }}</h3>
-    <p>{{ post.text }}</p>
-    <p> 작성자 : {{post.name_id}}</p>
-    <p> 작성일 : {{ post.created_at }}</p>
-    <p> 수정일 : {{ post.updated_at }}</p>
-    <p>Category : {{ post.category }}</p>
-    {% if post.file%}
-    <P><img src = "{{post.file.url}}" alt=""></P>
+ 
+    <div class = "left">
+        <br>
+        <p>Category : {{ post.category }}</p>
+        <h3 style="font-size : 40px;">{{ post.title }}</h3>
+        {% if post.file%}
     <p>File : <a id="id_uploaded_file" href="{{ post.file.url }}" download>{{ post.file }}</a></p>
-    {% endif %}
+    <P><img src = "{{post.file.url}}" alt=""></P>
+        {% endif %}
+        <p style="display : inline-block; width: 500px;">{{ post.text }}</p>
+    </div>
 
-
-<a href="{% url 'main' %}">Back</a>
-<a href="{% url 'post_edit' post.id %}">Edit</a>
-<a href="{% url 'post_delete' post.id %}" onclick="return confirm('정말로 삭제하시겠습니까?');">Delete</a>
-
+    <div class = "right">
+        <br><br><br>
+        <p> 작성자 : {{post.name_id}}</p>
+        <p> 작성일 : {{ post.created_at }}</p>
+        <p> 수정일 : {{ post.updated_at }}</p>
+        
+    <br><br><br> <div style = "margin-left : 100px;">
+    <a href="{% url 'main' %}">Back</a>
+    <a href="{% url 'post_edit' post.id %}">Edit</a>
+    <a href="{% url 'post_delete' post.id %}" onclick="return confirm('정말로 삭제하시겠습니까?');">Delete</a>
+    </div>
+</div>
+    
+<div style="line-height:200px">
+<br>
+</div>
+   
 <hr>
-
 <form action='{% url 'comment_new' post.id %}' method = 'post'>
     {% csrf_token %}
     <table margin = >
